--- a/benchmark/python_25part_1.7nm3_300K_NVT/run.ipynb
+++ b/benchmark/python_25part_1.7nm3_300K_NVT/run.ipynb
@@ -2,9 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step N temp epot ekin press vol\n",
+      "0 25 94.35 -3.17E-01 6.75E+00 1.73E+02 1.73E+03\n",
+      "500 25 299.23 -7.53E-02 2.14E+01 5.94E+02 1.73E+03\n",
+      "1000 25 301.65 -3.49E-01 2.16E+01 5.67E+02 1.73E+03\n",
+      "1500 25 301.3 -2.62E-01 2.16E+01 5.77E+02 1.73E+03\n",
+      "2000 25 299.11 -1.56E-01 2.14E+01 6.06E+02 1.73E+03\n",
+      "2500 25 299.78 -1.58E-01 2.14E+01 5.81E+02 1.73E+03\n",
+      "3000 25 299.9 -4.81E-02 2.15E+01 5.70E+02 1.73E+03\n",
+      "3500 25 301.44 -1.84E-01 2.16E+01 5.72E+02 1.73E+03\n",
+      "4000 25 299.99 -1.78E-01 2.15E+01 5.64E+02 1.73E+03\n",
+      "4500 25 300.28 -2.48E-01 2.15E+01 5.73E+02 1.73E+03\n",
+      "5000 25 299.54 -1.33E-01 2.14E+01 5.84E+02 1.73E+03\n",
+      "5500 25 301.12 -3.22E-01 2.15E+01 5.53E+02 1.73E+03\n",
+      "6000 25 302.83 -3.82E-01 2.17E+01 5.71E+02 1.73E+03\n",
+      "6500 25 299.72 -9.86E-02 2.14E+01 6.06E+02 1.73E+03\n",
+      "7000 25 301.07 -2.36E-01 2.15E+01 5.76E+02 1.73E+03\n",
+      "7500 25 299.23 -9.64E-02 2.14E+01 5.67E+02 1.73E+03\n",
+      "8000 25 299.61 -1.73E-01 2.14E+01 5.60E+02 1.73E+03\n",
+      "8500 25 300.38 -1.42E-01 2.15E+01 5.59E+02 1.73E+03\n",
+      "9000 25 300.17 -2.64E-01 2.15E+01 5.70E+02 1.73E+03\n",
+      "9500 25 300.61 -1.69E-01 2.15E+01 5.93E+02 1.73E+03\n",
+      "10000 25 301.13 -1.23E-01 2.15E+01 5.77E+02 1.73E+03\n",
+      "10500 25 299.84 -6.63E-02 2.15E+01 5.65E+02 1.73E+03\n",
+      "11000 25 299.78 -1.46E-01 2.14E+01 5.58E+02 1.73E+03\n",
+      "11500 25 299.42 -8.83E-02 2.14E+01 5.65E+02 1.73E+03\n",
+      "12000 25 300.4 -2.22E-01 2.15E+01 5.77E+02 1.73E+03\n",
+      "12500 25 298.85 -2.94E-01 2.14E+01 5.75E+02 1.73E+03\n",
+      "13000 25 301.5 -2.36E-01 2.16E+01 5.79E+02 1.73E+03\n",
+      "13500 25 298.98 -6.09E-02 2.14E+01 5.68E+02 1.73E+03\n",
+      "14000 25 300.09 -1.25E-01 2.15E+01 5.62E+02 1.73E+03\n",
+      "14500 25 299.68 -1.67E-01 2.14E+01 5.60E+02 1.73E+03\n",
+      "15000 25 300.63 -2.01E-01 2.15E+01 5.64E+02 1.73E+03\n",
+      "15500 25 300.43 -1.89E-01 2.15E+01 5.61E+02 1.73E+03\n",
+      "16000 25 301.91 -2.94E-01 2.16E+01 5.81E+02 1.73E+03\n",
+      "16500 25 300.68 -2.44E-01 2.15E+01 5.92E+02 1.73E+03\n",
+      "17000 25 302.55 -2.72E-01 2.16E+01 5.74E+02 1.73E+03\n",
+      "17500 25 300.8 -2.31E-01 2.15E+01 5.93E+02 1.73E+03\n",
+      "18000 25 298.8 -1.98E-01 2.14E+01 5.71E+02 1.73E+03\n",
+      "18500 25 300.36 -7.36E-02 2.15E+01 5.72E+02 1.73E+03\n",
+      "19000 25 300.31 -2.59E-01 2.15E+01 5.65E+02 1.73E+03\n",
+      "19500 25 300.04 -1.34E-01 2.15E+01 5.59E+02 1.73E+03\n",
+      "20000 25 299.1 -7.30E-02 2.14E+01 5.66E+02 1.73E+03\n",
+      "20500 25 299.28 -5.46E-02 2.14E+01 5.98E+02 1.73E+03\n",
+      "21000 25 299.19 -9.76E-02 2.14E+01 5.98E+02 1.73E+03\n",
+      "21500 25 287.32 7.62E-01 2.06E+01 7.90E+02 1.73E+03\n",
+      "22000 25 293.95 3.02E-01 2.10E+01 5.39E+02 1.73E+03\n",
+      "22500 25 299.07 -1.33E-01 2.14E+01 5.71E+02 1.73E+03\n",
+      "23000 25 301.35 -2.95E-01 2.16E+01 6.12E+02 1.73E+03\n",
+      "23500 25 301.88 -1.86E-01 2.16E+01 5.67E+02 1.73E+03\n",
+      "24000 25 293.53 2.88E-01 2.10E+01 5.10E+02 1.73E+03\n",
+      "24500 25 300.2 -1.05E-01 2.15E+01 5.62E+02 1.73E+03\n",
+      "25000 25 299.47 -1.27E-01 2.14E+01 5.59E+02 1.73E+03\n",
+      "25500 25 301.04 -1.52E-01 2.15E+01 5.79E+02 1.73E+03\n",
+      "26000 25 300.64 -1.80E-01 2.15E+01 5.59E+02 1.73E+03\n",
+      "26500 25 299.68 -1.36E-01 2.14E+01 5.81E+02 1.73E+03\n",
+      "27000 25 301.58 -3.34E-01 2.16E+01 5.80E+02 1.73E+03\n",
+      "27500 25 300.26 -1.51E-01 2.15E+01 3.52E+02 1.73E+03\n",
+      "28000 25 301.87 -2.77E-01 2.16E+01 5.78E+02 1.73E+03\n",
+      "28500 25 300.25 -2.37E-01 2.15E+01 5.65E+02 1.73E+03\n",
+      "29000 25 302.85 -4.37E-01 2.17E+01 5.58E+02 1.73E+03\n",
+      "29500 25 301.07 -2.55E-01 2.15E+01 5.64E+02 1.73E+03\n",
+      "30000 25 302.35 -3.63E-01 2.16E+01 5.62E+02 1.73E+03\n",
+      "30500 25 298.1 -7.26E-02 2.13E+01 5.68E+02 1.73E+03\n",
+      "31000 25 301.05 -2.99E-01 2.15E+01 5.82E+02 1.73E+03\n",
+      "31500 25 284.46 1.01E+00 2.04E+01 8.25E+02 1.73E+03\n",
+      "32000 25 299.95 -2.22E-01 2.15E+01 5.68E+02 1.73E+03\n",
+      "32500 25 302.53 -3.02E-01 2.16E+01 5.76E+02 1.73E+03\n",
+      "33000 25 300.93 -1.40E-01 2.15E+01 5.63E+02 1.73E+03\n",
+      "33500 25 299.09 -1.35E-01 2.14E+01 5.59E+02 1.73E+03\n",
+      "34000 25 299.18 -1.95E-01 2.14E+01 5.83E+02 1.73E+03\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 14\u001b[0m\n\u001b[1;32m      2\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m../../molecular-simulation/\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmain\u001b[39;00m \u001b[39mimport\u001b[39;00m MolecularDynamics\n\u001b[1;32m      5\u001b[0m MolecularDynamics(number_atoms\u001b[39m=\u001b[39;49m\u001b[39m25\u001b[39;49m,\n\u001b[1;32m      6\u001b[0m                     Lx\u001b[39m=\u001b[39;49m\u001b[39m12\u001b[39;49m,\n\u001b[1;32m      7\u001b[0m                     maximum_steps\u001b[39m=\u001b[39;49m\u001b[39m200000\u001b[39;49m,\n\u001b[1;32m      8\u001b[0m                     dimensions\u001b[39m=\u001b[39;49m \u001b[39m3\u001b[39;49m,\n\u001b[1;32m      9\u001b[0m                     desired_temperature\u001b[39m=\u001b[39;49m\u001b[39m300\u001b[39;49m,\n\u001b[1;32m     10\u001b[0m                     tau_temp\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m,\n\u001b[1;32m     11\u001b[0m                     seed\u001b[39m=\u001b[39;49m\u001b[39m41982\u001b[39;49m,\n\u001b[1;32m     12\u001b[0m                     thermo\u001b[39m=\u001b[39;49m\u001b[39m500\u001b[39;49m,\n\u001b[1;32m     13\u001b[0m                     dump\u001b[39m=\u001b[39;49m\u001b[39m500\u001b[39;49m,\n\u001b[0;32m---> 14\u001b[0m                     )\u001b[39m.\u001b[39;49mrun()\n",
+      "File \u001b[0;32m~/Git/Personal/mdcourse.github.io/benchmark/python_25part_1.7nm3_300K_NVT/../../molecular-simulation/main.py:331\u001b[0m, in \u001b[0;36mMolecularDynamics.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    329\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Perform the loop over time.\"\"\"\u001b[39;00m\n\u001b[1;32m    330\u001b[0m \u001b[39mfor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstep \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmaximum_steps\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m--> 331\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mintegrate_equation_of_motion()\n\u001b[1;32m    332\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwrap_in_box()\n\u001b[1;32m    333\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtau_temp \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m~/Git/Personal/mdcourse.github.io/benchmark/python_25part_1.7nm3_300K_NVT/../../molecular-simulation/main.py:347\u001b[0m, in \u001b[0;36mMolecularDynamics.integrate_equation_of_motion\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    345\u001b[0m atoms_velocity_Dt2 \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39matoms_velocities \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39matoms_accelerations\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtime_step\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n\u001b[1;32m    346\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39matoms_positions \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39matoms_positions \u001b[39m+\u001b[39m atoms_velocity_Dt2\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtime_step\n\u001b[0;32m--> 347\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39matoms_accelerations \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mevaluate_LJ_force()\u001b[39m/\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39matom_mass\n\u001b[1;32m    348\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39matoms_velocities \u001b[39m=\u001b[39m atoms_velocity_Dt2 \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39matoms_accelerations\u001b[39m*\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtime_step\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n\u001b[1;32m    349\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtau_temp \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m~/Git/Personal/mdcourse.github.io/benchmark/python_25part_1.7nm3_300K_NVT/../../molecular-simulation/main.py:298\u001b[0m, in \u001b[0;36mUtilities.evaluate_LJ_force\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    296\u001b[0m box_size \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdiff(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbox_boundaries)\u001b[39m.\u001b[39mreshape(\u001b[39m3\u001b[39m)\n\u001b[1;32m    297\u001b[0m rij_xyz \u001b[39m=\u001b[39m (np\u001b[39m.\u001b[39mremainder(position_i \u001b[39m-\u001b[39m position_j \u001b[39m+\u001b[39m box_size\u001b[39m/\u001b[39m\u001b[39m2.\u001b[39m, box_size) \u001b[39m-\u001b[39m box_size\u001b[39m/\u001b[39m\u001b[39m2.\u001b[39m)\u001b[39m.\u001b[39mT\n\u001b[0;32m--> 298\u001b[0m rij \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msqrt(np\u001b[39m.\u001b[39;49msum(rij_xyz\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39m2\u001b[39;49m))\n\u001b[1;32m    299\u001b[0m \u001b[39mif\u001b[39;00m rij \u001b[39m<\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcut_off:\n\u001b[1;32m    300\u001b[0m     dU_dr \u001b[39m=\u001b[39m \u001b[39m48\u001b[39m\u001b[39m/\u001b[39mrij\u001b[39m*\u001b[39m(\u001b[39m1\u001b[39m\u001b[39m/\u001b[39mrij\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m12\u001b[39m\u001b[39m-\u001b[39m\u001b[39m0.5\u001b[39m\u001b[39m/\u001b[39mrij\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36msum\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/core/fromnumeric.py:2183\u001b[0m, in \u001b[0;36m_sum_dispatcher\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   2113\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   2114\u001b[0m \u001b[39m    Clip (limit) the values in an array.\u001b[39;00m\n\u001b[1;32m   2115\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2178\u001b[0m \n\u001b[1;32m   2179\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m   2180\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapfunc(a, \u001b[39m'\u001b[39m\u001b[39mclip\u001b[39m\u001b[39m'\u001b[39m, a_min, a_max, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m-> 2183\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_sum_dispatcher\u001b[39m(a, axis\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, dtype\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, out\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, keepdims\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m   2184\u001b[0m                     initial\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, where\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m   2185\u001b[0m     \u001b[39mreturn\u001b[39;00m (a, out)\n\u001b[1;32m   2188\u001b[0m \u001b[39m@array_function_dispatch\u001b[39m(_sum_dispatcher)\n\u001b[1;32m   2189\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msum\u001b[39m(a, axis\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, dtype\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, out\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, keepdims\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39m_NoValue,\n\u001b[1;32m   2190\u001b[0m         initial\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39m_NoValue, where\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39m_NoValue):\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"../../molecular-simulation/\")\n",
@@ -12,7 +105,7 @@
     "\n",
     "MolecularDynamics(number_atoms=25,\n",
     "                    Lx=12,\n",
-    "                    maximum_steps=2000000,\n",
+    "                    maximum_steps=200000,\n",
     "                    dimensions= 3,\n",
     "                    desired_temperature=300,\n",
     "                    tau_temp=100,\n",
