--- a/molecular-simulation/run.ipynb
+++ b/molecular-simulation/run.ipynb
@@ -2,19 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.029167945148518164\n",
+      "step N temp epot ekin press vol\n",
+      "0 10 149.82 -1.67E-04 4.02E+00 2.30E+01 7.98E+03\n",
+      "100 10 279.9 -1.11E-03 7.51E+00 5.45E+01 6.29E+03\n",
+      "200 10 297.63 -4.72E-02 7.98E+00 7.81E+01 5.12E+03\n",
+      "300 10 298.81 -2.28E-03 8.02E+00 8.58E+01 4.27E+03\n",
+      "400 10 305.36 -9.69E-02 8.19E+00 1.04E+02 3.66E+03\n",
+      "500 10 302.05 -6.89E-02 8.10E+00 1.14E+02 3.19E+03\n",
+      "600 10 299.67 -5.65E-03 8.04E+00 1.29E+02 2.85E+03\n",
+      "700 10 300.02 -8.90E-03 8.05E+00 1.42E+02 2.59E+03\n",
+      "800 10 299.74 -3.98E-02 8.04E+00 1.65E+02 2.41E+03\n",
+      "900 10 299.1 -4.59E-03 8.02E+00 1.62E+02 2.26E+03\n",
+      "1000 10 301.89 -8.67E-02 8.10E+00 1.68E+02 2.15E+03\n",
+      "1100 10 298.14 -2.74E-02 8.00E+00 1.76E+02 2.07E+03\n",
+      "1200 10 299.26 -3.64E-03 8.03E+00 1.83E+02 2.01E+03\n",
+      "1300 10 300.31 -1.71E-02 8.06E+00 1.87E+02 1.96E+03\n",
+      "1400 10 299.0 -6.61E-03 8.02E+00 1.88E+02 1.94E+03\n",
+      "1500 10 301.03 -5.26E-02 8.08E+00 2.11E+02 1.93E+03\n",
+      "1600 10 299.44 -4.64E-02 8.03E+00 1.98E+02 1.91E+03\n",
+      "1700 10 299.57 -3.74E-03 8.04E+00 1.94E+02 1.90E+03\n",
+      "1800 10 300.13 -2.80E-02 8.05E+00 1.91E+02 1.92E+03\n",
+      "1900 10 299.83 -5.45E-02 8.04E+00 1.90E+02 1.90E+03\n",
+      "2000 10 299.02 -8.50E-03 8.02E+00 1.93E+02 1.90E+03\n",
+      "2100 10 299.88 -3.92E-03 8.05E+00 1.96E+02 1.88E+03\n",
+      "2200 10 282.85 4.82E-01 7.59E+00 -3.95E+02 1.85E+03\n",
+      "2300 10 301.32 -7.53E-03 8.08E+00 2.08E+02 1.79E+03\n",
+      "2400 10 300.15 -3.47E-03 8.05E+00 2.04E+02 1.80E+03\n",
+      "2500 10 300.0 -3.22E-03 8.05E+00 2.03E+02 1.81E+03\n",
+      "2600 10 300.09 -5.07E-03 8.05E+00 2.03E+02 1.82E+03\n",
+      "2700 10 299.57 -1.42E-02 8.04E+00 2.00E+02 1.84E+03\n",
+      "2800 10 301.54 -8.57E-02 8.09E+00 1.96E+02 1.84E+03\n",
+      "2900 10 299.42 -5.08E-03 8.03E+00 1.99E+02 1.85E+03\n",
+      "3000 10 301.47 -5.87E-02 8.09E+00 1.97E+02 1.84E+03\n",
+      "3100 10 299.95 -6.37E-02 8.05E+00 1.95E+02 1.85E+03\n",
+      "3200 10 299.62 -5.31E-03 8.04E+00 1.99E+02 1.84E+03\n",
+      "3300 10 299.68 -5.51E-03 8.04E+00 1.99E+02 1.84E+03\n",
+      "3400 10 300.15 -1.23E-02 8.05E+00 1.99E+02 1.84E+03\n",
+      "3500 10 299.11 -1.27E-02 8.02E+00 1.98E+02 1.85E+03\n",
+      "3600 10 299.79 -6.24E-03 8.04E+00 1.99E+02 1.84E+03\n",
+      "3700 10 299.94 -2.88E-03 8.05E+00 2.00E+02 1.84E+03\n",
+      "3800 10 299.75 -1.09E-03 8.04E+00 2.00E+02 1.84E+03\n",
+      "3900 10 300.17 -1.02E-02 8.05E+00 2.01E+02 1.84E+03\n",
+      "4000 10 299.91 -4.22E-03 8.05E+00 2.00E+02 1.84E+03\n",
+      "4100 10 301.08 -3.81E-02 8.08E+00 1.96E+02 1.87E+03\n",
+      "4200 10 300.17 -3.36E-02 8.05E+00 1.96E+02 1.86E+03\n",
+      "4300 10 298.77 -2.09E-02 8.02E+00 1.97E+02 1.84E+03\n",
+      "4400 10 310.42 -4.29E-02 8.33E+00 2.23E+02 1.68E+03\n",
+      "4500 10 301.1 -1.44E-03 8.08E+00 2.14E+02 1.73E+03\n",
+      "4600 10 300.22 -5.00E-03 8.05E+00 2.10E+02 1.76E+03\n",
+      "4700 10 299.97 -3.35E-03 8.05E+00 2.06E+02 1.78E+03\n",
+      "4800 10 301.28 -5.02E-02 8.08E+00 2.02E+02 1.80E+03\n",
+      "4900 10 298.17 -1.47E-02 8.00E+00 2.01E+02 1.81E+03\n",
+      "5000 10 300.04 -1.54E-02 8.05E+00 2.05E+02 1.82E+03\n",
+      "5100 10 299.06 -3.62E-02 8.02E+00 1.99E+02 1.82E+03\n",
+      "5200 10 299.74 -2.07E-02 8.04E+00 2.00E+02 1.82E+03\n",
+      "5300 10 299.13 -3.75E-02 8.02E+00 1.98E+02 1.83E+03\n",
+      "5400 10 299.68 -8.45E-03 8.04E+00 2.00E+02 1.83E+03\n",
+      "5500 10 299.88 -6.42E-03 8.04E+00 2.00E+02 1.83E+03\n",
+      "5600 10 299.96 -2.12E-03 8.05E+00 2.01E+02 1.83E+03\n",
+      "5700 10 300.08 -7.27E-03 8.05E+00 2.01E+02 1.84E+03\n",
+      "5800 10 300.07 -6.20E-03 8.05E+00 2.01E+02 1.84E+03\n",
+      "5900 10 300.12 -8.84E-03 8.05E+00 2.00E+02 1.84E+03\n",
+      "6000 10 299.95 -2.35E-03 8.05E+00 2.00E+02 1.84E+03\n",
+      "6100 10 302.87 -9.63E-02 8.13E+00 2.06E+02 1.84E+03\n",
+      "6200 10 298.08 3.69E-02 8.00E+00 2.33E+02 1.87E+03\n",
+      "6300 10 299.87 -1.55E-02 8.04E+00 1.97E+02 1.86E+03\n",
+      "6400 10 299.96 -2.81E-02 8.05E+00 2.01E+02 1.86E+03\n",
+      "6500 10 301.58 -6.88E-02 8.09E+00 1.97E+02 1.85E+03\n",
+      "6600 10 299.77 -1.16E-02 8.04E+00 1.96E+02 1.87E+03\n",
+      "6700 10 300.45 -2.97E-02 8.06E+00 1.97E+02 1.86E+03\n",
+      "6800 10 299.7 -2.71E-03 8.04E+00 1.98E+02 1.86E+03\n",
+      "6900 10 300.02 -5.73E-03 8.05E+00 1.98E+02 1.85E+03\n",
+      "7000 10 299.96 -3.70E-03 8.05E+00 1.99E+02 1.85E+03\n",
+      "7100 10 300.12 -1.12E-02 8.05E+00 2.01E+02 1.85E+03\n",
+      "7200 10 299.79 -1.49E-02 8.04E+00 2.01E+02 1.86E+03\n",
+      "7300 10 299.86 -3.34E-03 8.04E+00 1.98E+02 1.86E+03\n",
+      "7400 10 299.96 -8.03E-04 8.05E+00 1.99E+02 1.85E+03\n",
+      "7500 10 300.01 -2.41E-03 8.05E+00 1.99E+02 1.85E+03\n",
+      "7600 10 300.03 -3.42E-03 8.05E+00 1.99E+02 1.85E+03\n",
+      "7700 10 300.66 -2.80E-02 8.07E+00 1.98E+02 1.84E+03\n",
+      "7800 10 300.12 -6.94E-02 8.05E+00 1.95E+02 1.84E+03\n",
+      "7900 10 298.38 -8.26E-02 8.00E+00 1.93E+02 1.85E+03\n",
+      "8000 10 298.76 -7.86E-03 8.01E+00 2.00E+02 1.84E+03\n",
+      "8100 10 302.73 -8.20E-02 8.12E+00 1.96E+02 1.86E+03\n",
+      "8200 10 299.98 -5.83E-03 8.05E+00 1.98E+02 1.85E+03\n",
+      "8300 10 300.28 -1.68E-02 8.06E+00 1.99E+02 1.85E+03\n",
+      "8400 10 301.69 -4.52E-03 8.09E+00 2.14E+02 1.73E+03\n",
+      "8500 10 300.21 -2.32E-03 8.05E+00 2.09E+02 1.76E+03\n",
+      "8600 10 300.03 -7.46E-03 8.05E+00 2.06E+02 1.78E+03\n",
+      "8700 10 299.75 -2.67E-03 8.04E+00 2.02E+02 1.82E+03\n",
+      "8800 10 300.99 -9.12E-02 8.07E+00 1.96E+02 1.83E+03\n",
+      "8900 10 297.91 -6.77E-03 7.99E+00 2.00E+02 1.82E+03\n",
+      "9000 10 299.93 -1.35E-02 8.05E+00 2.00E+02 1.83E+03\n",
+      "9100 10 299.47 -2.30E-03 8.03E+00 1.99E+02 1.85E+03\n",
+      "9200 10 298.97 -8.36E-03 8.02E+00 1.98E+02 1.85E+03\n",
+      "9300 10 298.97 -6.97E-03 8.02E+00 1.98E+02 1.85E+03\n",
+      "9400 10 299.86 -4.50E-03 8.04E+00 2.00E+02 1.85E+03\n",
+      "9500 10 299.89 -6.13E-03 8.05E+00 1.99E+02 1.85E+03\n",
+      "9600 10 300.07 -6.00E-03 8.05E+00 2.00E+02 1.85E+03\n",
+      "9700 10 299.89 -1.70E-03 8.05E+00 1.97E+02 1.87E+03\n",
+      "9800 10 300.07 -1.45E-02 8.05E+00 1.97E+02 1.86E+03\n",
+      "9900 10 300.02 -7.87E-03 8.05E+00 1.99E+02 1.85E+03\n",
+      "10000 10 299.94 -1.33E-02 8.05E+00 2.00E+02 1.86E+03\n"
+     ]
+    }
+   ],
    "source": [
     "from main import MolecularDynamics\n",
     "\n",
     "x = MolecularDynamics(number_atoms=10,\n",
     "                      Lx=20,\n",
-    "                      maximum_steps=1000,\n",
+    "                      maximum_steps=10000,\n",
     "                      thermo = 100,\n",
     "                      dump = 100,\n",
-    "                      tau_temp = None,\n",
-    "                      tau_press = None,\n",
+    "                      tau_temp = 100,\n",
+    "                      tau_press = 1000,\n",
+    "                      desired_pressure = 200,\n",
     "                      seed=69837,\n",
     "                      )\n",
     "x.run()"
@@ -22,25 +133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step N temp epot press vol\n",
-      "0 10 146.77 -1.66E-04 2.25E+01 8.00E+03\n",
-      "100 59 22.77 -2.74E-01 2.05E+01 8.00E+03\n",
-      "200 107 12.46 2.05E+00 1.48E+02 8.00E+03\n",
-      "300 151 8.81 -1.48E+00 2.99E+01 8.00E+03\n",
-      "400 189 7.03 -1.63E+00 -2.72E+02 8.00E+03\n",
-      "500 237 5.6 -3.30E+00 5.39E+01 8.00E+03\n",
-      "600 269 4.93 -2.84E+00 -4.98E+02 8.00E+03\n",
-      "700 310 4.27 -4.21E+00 1.98E+02 8.00E+03\n",
-      "800 362 3.66 -2.57E+00 2.97E+02 8.00E+03\n",
-      "900 396 3.34 -5.93E+00 2.28E+02 8.00E+03\n",
-      "1000 427 3.1 -7.98E+00 2.28E+02 8.00E+03\n"
+      "step N temp epot ekin press vol\n",
+      "0 11 132.09 -2.04E-03 3.94E+00 2.25E+01 8.00E+03\n",
+      "100 47 28.72 -1.60E-01 3.94E+00 2.32E+01 8.00E+03\n",
+      "200 34 40.03 -2.02E-01 3.94E+00 2.72E+01 8.00E+03\n",
+      "300 49 27.52 -2.25E-01 3.94E+00 2.02E+01 8.00E+03\n",
+      "400 41 33.02 1.74E-01 3.94E+00 -3.10E+02 8.00E+03\n",
+      "500 48 28.1 -1.34E-01 3.94E+00 2.07E+01 8.00E+03\n",
+      "600 51 26.42 -1.43E-01 3.94E+00 2.12E+01 8.00E+03\n",
+      "700 49 27.52 -2.67E-01 3.94E+00 1.90E+01 8.00E+03\n",
+      "800 52 25.9 -1.17E-01 3.94E+00 2.29E+01 8.00E+03\n",
+      "900 37 36.69 -3.67E-02 3.94E+00 2.23E+01 8.00E+03\n",
+      "1000 46 29.35 -1.73E-01 3.94E+00 2.15E+01 8.00E+03\n"
      ]
     }
    ],
@@ -50,8 +161,8 @@
     "x = MonteCarlo(number_atoms=10,\n",
     "                      Lx=20,\n",
     "                      maximum_steps=1000,\n",
-    "                      displace_mc = 0.5,\n",
-    "                      mu = -0.5,\n",
+    "                      displace_mc = None,\n",
+    "                      mu = -3,\n",
     "                      seed=69837,\n",
     "                      dump = 100,\n",
     "                      thermo = 100,\n",
