--- a/molecular-simulation/run.ipynb
+++ b/molecular-simulation/run.ipynb
@@ -10,67 +10,28 @@
      "output_type": "stream",
      "text": [
       "step N temp epot ekin press vol\n",
-      "0 25 79.09 -1.90E-01 5.66E+00 1.46E+02 1.73E+03\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3442, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/tmp/ipykernel_192120/1723090520.py\", line 11, in <module>\n",
-      "    x.run()\n",
-      "  File \"/home/simon/Git/Personal/mdcourse.github.io/molecular-simulation/main.py\", line 331, in run\n",
-      "    self.integrate_equation_of_motion()\n",
-      "  File \"/home/simon/Git/Personal/mdcourse.github.io/molecular-simulation/main.py\", line 348, in integrate_equation_of_motion\n",
-      "    self.atoms_accelerations = self.evaluate_LJ_force()/self.atom_mass\n",
-      "  File \"/home/simon/Git/Personal/mdcourse.github.io/molecular-simulation/main.py\", line -1, in evaluate_LJ_force\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 2057, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(r))\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
-      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/stack_data/core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "  File \"/home/simon/.local/lib/python3.10/site-packages/executing/executing.py\", line 190, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+      "0 35 428.15 1.45E+00 4.34E+01 1.49E+03 1.73E+03\n",
+      "100 35 358.28 -4.98E-01 3.63E+01 9.48E+02 1.73E+03\n",
+      "200 35 321.0 -3.46E-01 3.25E+01 8.55E+02 1.73E+03\n",
+      "300 35 308.8 -4.78E-01 3.13E+01 8.00E+02 1.73E+03\n",
+      "400 35 305.24 -6.28E-01 3.09E+01 8.14E+02 1.73E+03\n",
+      "500 35 302.34 -5.69E-01 3.06E+01 8.13E+02 1.73E+03\n",
+      "600 35 303.93 -7.52E-01 3.08E+01 8.18E+02 1.73E+03\n",
+      "700 35 290.1 6.30E-01 2.94E+01 1.03E+03 1.73E+03\n",
+      "800 35 298.39 -2.68E-01 3.02E+01 8.94E+02 1.73E+03\n",
+      "900 35 295.79 -6.95E-02 3.00E+01 9.00E+02 1.73E+03\n",
+      "1000 35 298.14 -1.71E-01 3.02E+01 9.35E+02 1.73E+03\n"
      ]
     }
    ],
    "source": [
     "from main import MolecularDynamics\n",
     "\n",
-    "x = MolecularDynamics(number_atoms=25,\n",
+    "x = MolecularDynamics(number_atoms=35,\n",
     "                      Lx=12,\n",
-    "                      maximum_steps=10000,\n",
-    "                      thermo = 10000,\n",
-    "                      dump = 1,  \n",
+    "                      maximum_steps=1000,\n",
+    "                      thermo = 100,\n",
+    "                      dump = 100,  \n",
     "                      tau_temp = 100,\n",
     "                      seed=69817,\n",
     "                      )\n",
@@ -79,9 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step N temp epot ekin press vol\n",
+      "0 11 270.0 -2.04E-03 8.05E+00 4.60E+01 8.00E+03\n",
+      "1000 46 60.0 -1.73E-01 8.05E+00 4.45E+01 8.00E+03\n"
+     ]
+    }
+   ],
    "source": [
     "from main import MonteCarlo\n",
     "\n",
