--- a/tests/build-documentation.ipynb
+++ b/tests/build-documentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,10 @@
     "import numpy as np\n",
     "import subprocess\n",
     "\n",
+    "from utilities import detect_saving_folder, try_to_copy_file, \\\n",
+    "                      return_file_content, detect_block_code, \\\n",
+    "                      detect_block_types, create_file, detect_last_matching_line \\\n",
+    "\n",
     "current_path = os.getcwd()\n",
     "git_repo = git.Repo(current_path, search_parent_directories=True)\n",
     "git_path = git_repo.git.rev_parse(\"--show-toplevel\")\n",
@@ -24,17 +28,310 @@
     "assert os.path.exists(path_to_docs), \"\"\"Documentation files not found\"\"\"\n",
     "\n",
     "if os.path.exists(\"generated-codes/\") is False:\n",
-    "    os.mkdir(\"generated-codes/\")\n",
-    "\n",
+    "    os.mkdir(\"generated-codes/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False True False True\n",
+      "\n",
+      "\n",
+      "class Prepare:\n",
+      "    def __init__(self,\n",
+      "                number_atoms=[10],  # List\n",
+      "                epsilon=[0.1],  # List - Kcal/mol\n",
+      "                sigma=[1],  # List - Angstrom\n",
+      "                atom_mass=[1],  # List - g/mol\n",
+      "                *args,\n",
+      "                **kwargs):\n",
+      "        self.number_atoms = number_atoms\n",
+      "        self.epsilon = epsilon\n",
+      "        self.sigma = sigma\n",
+      "        self.atom_mass = atom_mass\n",
+      "        super().__init__(*args, **kwargs)\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# In chapter 1, all the files are simply created.\n",
-    "chapter_id = 1\n",
-    "filename = path_to_docs + \"chapter\"+str(chapter_id)+\".rst\"\n",
-    "list_files = []\n",
-    "if os.path.exists(filename):\n",
-    "    # saving folder\n",
-    "    folder = \"generated-codes/chapter\"+str(chapter_id)+\"/\"\n",
-    "    if os.path.exists(folder) is False:\n",
-    "        os.mkdir(folder)\n",
+    "for chapter_id in [1, 2]: # np.arange(10):\n",
+    "    filename = path_to_docs + \"chapter\"+str(chapter_id)+\".rst\"\n",
+    "    created_files = []\n",
+    "    if os.path.exists(filename):\n",
+    "        folder = detect_saving_folder(chapter_id)\n",
+    "        created_files = try_to_copy_file(chapter_id, created_files)\n",
+    "        file_content = return_file_content(filename)\n",
+    "        block_contents, block_names = detect_block_code(file_content)\n",
+    "        block_types = detect_block_types(block_contents)\n",
+    "        created_files = create_file(block_contents, block_names, created_files, folder)\n",
+    "\n",
+    "\n",
+    "for content, name, type in zip(block_contents, block_names, block_types):\n",
+    "    if \"test_\" not in name:\n",
+    "        ISIMPORT, ISMETHOD, ISCLASS, ISPARTIAL, ISINIT = type\n",
+    "        original_file_content = return_file_content(folder+name+\".py\")\n",
+    "        if ISIMPORT:\n",
+    "            # Add the content at the start of the file\n",
+    "            file = open(folder+name+\".py\", \"w\")\n",
+    "            for line in content:\n",
+    "                file.write(line)\n",
+    "            for line in original_file_content:\n",
+    "                file.write(line)\n",
+    "            file.close()\n",
+    "        elif (ISMETHOD) & (ISPARTIAL is False):\n",
+    "            # Add the content at the end of the file, with an indentation\n",
+    "            file = open(folder+name+\".py\", \"w\")\n",
+    "            for line in original_file_content:\n",
+    "                file.write(line)\n",
+    "            for line in content:\n",
+    "                file.write(\"    \"+line)\n",
+    "            file.close()\n",
+    "        elif ISPARTIAL:\n",
+    "            # Add the content to the end of the __init__ method\n",
+    "            cpt_new_last, cpt_old_last = detect_last_matching_line(content, original_file_content)\n",
+    "            file = open(folder+name+\".py\", \"w\")\n",
+    "            for line in original_file_content[:cpt_old_last]:\n",
+    "                file.write(line)\n",
+    "            for line in content[cpt_new_last-1:]:\n",
+    "                if \"(...)\" not in line:\n",
+    "                    file.write(\"    \"+line)\n",
+    "            for line in original_file_content[cpt_old_last:]:\n",
+    "                file.write(line)\n",
+    "            file.close()\n",
+    "\n",
+    "        else:\n",
+    "            print(ISIMPORT, ISMETHOD, ISCLASS, ISPARTIAL, ISINIT)\n",
+    "            for line in content:\n",
+    "                print(line[:-1])\n",
+    "            print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\n',\n",
+       " '\\n',\n",
+       " 'def __init__(self,\\n',\n",
+       " '    (...)\\n',\n",
+       " '    super().__init__(*args, **kwargs)\\n',\n",
+       " '    self.calculate_LJunits_prefactors()\\n',\n",
+       " '\\n']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"Prepare\"\n",
+    "# Remove doublons in init functions\n",
+    "original_class = open(folder+name+\".py\", \"r\")\n",
+    "original_start_init = None\n",
+    "original_end_init = []\n",
+    "original_content = []\n",
+    "for cpt, l in enumerate(original_class):\n",
+    "    original_content.append(l)\n",
+    "    if (\"def\" in l) & (\"__init__\" in l):\n",
+    "        original_start_init = cpt\n",
+    "    elif (\":\" in l) & (\"def\" in l) & (\"__init__\" not in l):\n",
+    "        original_end_init.append(cpt)        \n",
+    "original_end_init = original_end_init[0]\n",
+    "original_class.close()\n",
+    "\n",
+    "# detect unique lines\n",
+    "_, idx = np.unique(original_content[original_start_init:original_end_init], return_index=True)\n",
+    "new_bloc = []\n",
+    "for i in np.sort(idx):\n",
+    "    new_bloc.append(original_content[original_start_init:original_end_init][i])\n",
+    "\n",
+    "REPLACED = False\n",
+    "new_class = open(folder+name+\".py\", \"w\")\n",
+    "for cpt, l in enumerate(original_content):\n",
+    "    if (cpt < original_start_init) | (cpt > original_end_init-2):\n",
+    "        new_class.write(l)\n",
+    "    else:\n",
+    "        if REPLACED is False:\n",
+    "            REPLACED = True\n",
+    "            for ll in new_bloc:\n",
+    "                new_class.write(ll)\n",
+    "new_class.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['    def __init__(self,\\n',\n",
+       " '                *args,\\n',\n",
+       " '                **kwargs):\\n',\n",
+       " '        super().__init__(*args, **kwargs)\\n',\n",
+       " '        self.calculate_LJunits_prefactors()\\n',\n",
+       " '        self.nondimensionalize_units_0()\\n',\n",
+       " '        self.identify_atom_properties()\\n',\n",
+       " '    \\n',\n",
+       " '\\n']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_bloc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 11)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpt_new_last, cpt_old_last"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end_init = original_empty_lines[original_empty_lines\n",
+    "                                > original_position_class][0]\n",
+    "new_class = open(folder+class_name_i+\".py\", \"w\")\n",
+    "for cpt, l in enumerate(original_content):\n",
+    "    new_class.write(l)\n",
+    "    if cpt == end_init+1:\n",
+    "        for ll in myclass:\n",
+    "            # Make sure the line is not already in\n",
+    "            # before writting it\n",
+    "            # ALREADYIN = False\n",
+    "            # for lll in original_content:\n",
+    "            #     if ll in lll:\n",
+    "            #         ALREADYIN = True\n",
+    "            if (\"def __init__\" not in ll) & (\"(...)\" not in ll): #  & (ALREADYIN is False):\n",
+    "                new_class.write(\"    \"+ll)\n",
+    "\n",
+    "new_class.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ISIMPORT = False\n",
+    "ISMETHOD = False\n",
+    "ISCLASS = False\n",
+    "ISINIT = False\n",
+    "PARTIAL = False\n",
+    "new_position_class = None\n",
+    "new_position_partial = None\n",
+    "for cpt, l in enumerate(myclass):\n",
+    "    if ((\"import\" in l) & (\"as\" in l)) | ((\"from\" in l) & (\"import\" in l)):\n",
+    "        ISIMPORT = True\n",
+    "    if (\"def\" in l) & (\"(self\" in l) & (\"):\" in l):\n",
+    "        ISMETHOD = True\n",
+    "    if (\"class\" in l) & (\":\" in l):\n",
+    "        ISCLASS = True\n",
+    "        new_position_class = cpt\n",
+    "    if (\"def\" in l) & (\"__init__\" in l):\n",
+    "        ISINIT = True\n",
+    "    if (\"(...)\" in l):\n",
+    "        PARTIAL = True\n",
+    "        new_position_partial = cpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "    file = open(filename, \"r\")\n",
     "    print_file = False\n",
     "    for line in file: # Loop over all the lines of the file\n",
@@ -333,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
