finish automating tests

--- a/tests/build-documentation.ipynb
+++ b/tests/build-documentation.ipynb
@@ -31,22 +31,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST -- chapter1.rst -- test_First.py\n",
+      "TEST -- chapter2.rst -- test_Prepare.py\n",
+      "TEST -- chapter3.rst -- test_InitializeSimulation.py\n",
+      "TEST -- chapter4.rst -- test_MinimizeEnergy.py\n"
+     ]
+    }
+   ],
    "source": [
+    "mycwd = os.getcwd()\n",
     "for chapter_id in np.arange(10):\n",
     "    filename = path_to_docs + \"chapter\"+str(chapter_id)+\".rst\"\n",
-    "    created_files = []\n",
+    "    created_files, created_tests = [], []\n",
     "    if os.path.exists(filename):\n",
     "        folder = detect_saving_folder(chapter_id)\n",
     "        created_files = try_to_copy_file(chapter_id, created_files)\n",
     "        file_content = return_file_content(filename)\n",
     "        block_contents, block_names = detect_block_code(file_content)\n",
     "        block_types = detect_block_types(block_contents)\n",
-    "        created_files = create_file(block_contents, block_names, created_files, folder)\n",
+    "        created_files, created_tests = create_file(block_contents, block_names,\n",
+    "                                                   created_files, created_tests, folder)\n",
     "        for content, name, type in zip(block_contents, block_names, block_types):\n",
-    "            append_content(folder, name, content, type)"
+    "            append_content(folder, name, content, type)\n",
+    "    # Run the tests\n",
+    "    os.chdir(folder)\n",
+    "    for test_file in created_tests:\n",
+    "        print(\"TEST --\", \"chapter\"+str(chapter_id)+\".rst\", \"--\", test_file)\n",
+    "        subprocess.call([\"python3\", test_file])\n",
+    "    os.chdir(mycwd)"
    ]
   },
   {
@@ -57,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "[False, False, False, False, False]"
+       "'generated-codes/chapter1/'"
       ]
      },
      "execution_count": 4,
@@ -66,12 +85,67 @@
     }
    ],
    "source": [
-    "type"
+    "folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\n',\n",
+       " '\\n',\n",
+       " 'import os\\n',\n",
+       " 'from MonteCarlo import MonteCarlo\\n',\n",
+       " 'from MolecularDynamics import MolecularDynamics\\n',\n",
+       " '\\n',\n",
+       " 'md = MolecularDynamics(data_folder = \"md-output/\")\\n',\n",
+       " 'md.__init__()\\n',\n",
+       " 'mc = MonteCarlo(data_folder = \"mc-output/\")\\n',\n",
+       " 'mc.__init__()\\n',\n",
+       " '\\n',\n",
+       " 'assert os.path.exists(\"mc-output\"), \"\"\"Error, missing mc-output/ folder\"\"\"\\n',\n",
+       " 'assert os.path.exists(\"md-output\"), \"\"\"Error, missing md-output/ folder\"\"\"\\n',\n",
+       " 'assert os.path.exists(\"Outputs\"), \"\"\"Error, missing Outputs/ folder\"\"\"\\n',\n",
+       " '\\n']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +153,7 @@
      "evalue": "invalid syntax (560269670.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[10], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif (ISMETHOD) & (ISPARTIAL is False):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif (ISMETHOD) & (ISPARTIAL is False):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -485,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
