continue fixing tests

--- a/tests/build-documentation.ipynb
+++ b/tests/build-documentation.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,12 +291,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "mycwd = os.getcwd()\n",
-    "for chapter_id in np.arange(10):\n",
+    "for chapter_id in np.arange(3):\n",
     "    filename = path_to_docs + \"chapter\"+str(chapter_id)+\".rst\"\n",
     "    created_files, created_tests = [], []\n",
     "    if os.path.exists(filename):\n",
@@ -343,6 +343,7 @@
     "                                                                            original_file_content)\n",
     "                    new_start, new_end = detect_method_boundaries(new_method[0],\n",
     "                                                                  new_content)\n",
+    "                    new_end += 1\n",
     "                    # detect the line that are in both original and readded file\n",
     "                    status_new_lines = detect_existing_lines(new_content[new_start:new_end],\n",
     "                                                             original_file_content[original_start:original_end])   \n",
