--- a/docs/source/journal-article.bib
+++ b/docs/source/journal-article.bib
@@ -9,9 +9,8 @@
   number = {3},
   pages = {720--733},
   issn = {0021-9606, 1089-7690},
-  doi = {10.1063/1.1743822},
   langid = {english},
-}
+} # doi = {10.1063/1.1743822},
 
 @article{michels1949isotherms,
   title={Isotherms of argon between 0 C and 150 C and pressures up to 2900
