improved pressure measurement

--- a/docs/source/journal-article.bib
+++ b/docs/source/journal-article.bib
@@ -23,3 +23,10 @@
   year={1949},
   publisher={Elsevier}
 }
+
+@book{frenkel2023understanding,
+  title={Understanding molecular simulation: from algorithms to applications},
+  author={Frenkel, Daan and Smit, Berend},
+  year={2002},
+  publisher={Elsevier}
+}
