--- a/docs/source/journal-article.bib
+++ b/docs/source/journal-article.bib
@@ -30,3 +30,26 @@
   year={2002},
   publisher={Elsevier}
 }
+
+@article{metropolis1953equation,
+  title={Equation of state calculations by fast computing machines},
+  author={Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth, Marshall
+         N and Teller, Augusta H and Teller, Edward},
+  journal={The journal of chemical physics},
+  volume={21},
+  number={6},
+  pages={1087--1092},
+  year={1953},
+  publisher={American Institute of Physics}
+}
+
+@article{metropolis1953simulated,
+  title={Simulated annealing},
+  author={Metropolis, Nicholas and Rosenbluth, AWRMN and Rosenbluth, M and Teller,
+          A and Teller, E},
+  journal={Journal of Chemical Physics},
+  volume={21},
+  number={161-162},
+  pages={1087--1092},
+  year={1953}
+}
