improved test chapter 1

--- a/docs/source/journal-article.bib
+++ b/docs/source/journal-article.bib
@@ -53,3 +53,12 @@
   pages={1087--1092},
   year={1953}
 }
+
+@book{Rossum2009Python3,
+ author = {Van Rossum, Guido and Drake, Fred L.},
+ title = {Python 3 Reference Manual},
+ year = {2009},
+ isbn = {1441412697},
+ publisher = {CreateSpace},
+ address = {Scotts Valley, CA}
+} 
