improved descripition chapter 3

--- a/docs/source/journal-article.bib
+++ b/docs/source/journal-article.bib
@@ -85,3 +85,14 @@
  publisher     = {Springer Science and Business Media {LLC}},
  url           = {https://doi.org/10.1038/s41586-020-2649-2}
 }
+
+@article{michaud2011mdanalysis,
+  title={MDAnalysis: a toolkit for the analysis of molecular dynamics simulations},
+  author={Michaud-Agrawal, Naveen and Denning, Elizabeth J and Woolf, Thomas B and Beckstein, Oliver},
+  journal={Journal of computational chemistry},
+  volume={32},
+  number={10},
+  pages={2319--2327},
+  year={2011},
+  publisher={Wiley Online Library}
+}
