improved grammar in chapters 5-7

--- a/docs/source/journal-article.bib
+++ b/docs/source/journal-article.bib
@@ -96,3 +96,25 @@
   year={2011},
   publisher={Wiley Online Library}
 }
+
+@article{humphrey1996vmd,
+  title={VMD: visual molecular dynamics},
+  author={Humphrey, William and Dalke, Andrew and Schulten, Klaus},
+  journal={Journal of molecular graphics},
+  volume={14},
+  number={1},
+  pages={33--38},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{stukowski2009visualization,
+  title={Visualization and analysis of atomistic simulation data with OVITO--the Open Visualization Tool},
+  author={Stukowski, Alexander},
+  journal={Modelling and simulation in materials science and engineering},
+  volume={18},
+  number={1},
+  pages={015012},
+  year={2009},
+  publisher={IOP Publishing}
+}
